--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Banner Generator</title>
+    <title>GitBanner</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,19 +23,20 @@
             <svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
                 <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
             </svg>
-            <span>Profile Banner Generator <sup><span style="color: #9e9e9e;">Beta</span></sup></span>
+            <span>GitBanner <sup><span style="color: #9e9e9e;">Beta</span></sup></span>
         </div>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Samples</a>
+            <a href="#about">About</a>
+            <a href="https://raw.githubusercontent.com/Saviru/Animated-Profile-Banner-Generator/refs/heads/main/profileBanner.svg">Samples</a>
+            <a href="https://github.com/Saviru">Developer</a>
         </nav>
     </header>
 
     <main>
         <div class="hero">
             <div class="glass-card">
-                <h1>GitHub Profile Banner Generator</h1>
+                <h1>Animated GitHub Profile Banner Generator</h1>
                 <p>Create a unique animated GitHub profile banner with terminal-style loading, glitch effects, and metal textures.</p>
             </div>
         </div>
@@ -91,7 +92,7 @@
             </div>
         </div>
 
-        <div class="features">
+        <div class="features" id="about">
             <div class="glass-card feature">
                 <div class="feature-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -129,11 +130,11 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 GitHub Profile Editor. Created by Saviru. Last updated: 2025-09-03</p>
+        <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
-            <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
-            <a href="#">Contact</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new">Support</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
     </footer>
 
