--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <footer>
         <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
-            <a href="#">Terms of Service</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/LICENSE">Terms of Service</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new">Support</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
