--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             Repeat Animation
                         </label>
                     </div>
-                    <p style="color: #ff0000;">*Still not working. (Sample Only)</p>
+                    <p style="color: #ff0000;">*Still not working. (Can not download. Sample Only.)</p>
                     <button type="button" id="generate-button" class="btn-primary">
                         <i class="fa-regular fa-image fa-beat"></i>
                         Generate Preview
