Update warning message in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             Repeat Animation
                         </label>
                     </div>
-                    <p style="color: #ff0000;">*Still not working. (Can't download. Sample Only.)</p>
+                    <p style="color: #ff0000;">*Sample only. Can't Download yet :(</p>
                     <button type="button" id="generate-button" class="btn-primary">
                         <i class="fa-regular fa-image fa-beat"></i>
                         Generate Preview
