Enhanced SVG processing, Fixed download button

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <nav>
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="https://raw.githubusercontent.com/Saviru/Animated-Profile-Banner-Generator/refs/heads/main/profileBanner.svg">Samples</a>
-            <a href="https://github.com/Saviru">Developer</a>
+            <a href="https://github.com/Saviru">Support</a>
         </nav>
     </header>
 
@@ -59,11 +58,11 @@
 
                     <div class="form-group">
                         <label for="animate-profile">
-                            <input type="checkbox" id="animate-profile">
+                            <input type="checkbox" id="animate-profile" disabled>
                             Repeat Animation
+                            <span style="font-weight: 200;color: #ff0000b0;">(Not Available)</span>
                         </label>
                     </div>
-                    <p style="color: #ff0000;">*Sample only. Can't Download yet :(</p>
                     <button type="button" id="generate-button" class="btn-primary">
                         <i class="fa-regular fa-image fa-beat"></i>
                         Generate Preview
