--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <nav>
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="https://github.com/Saviru">Support</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new?template=bug_report.md">Bug Report</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new?template=feature_request.md">Feature Request</a>
         </nav>
     </header>
 
@@ -132,7 +133,7 @@
         <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/LICENSE">Terms of Service</a>
-            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new">Support</a>
+            <a href="https://github.com/Saviru">Developer</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
     </footer>
