--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/LICENSE">Terms of Service</a>
-            <a href="https://github.com/Saviru">Developer</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/README.md">Developer</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
     </footer>
