--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="#about">About</a>
+            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/README.md">About</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new?template=bug_report.md">Bug Report</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/issues/new?template=feature_request.md">Feature Request</a>
         </nav>
@@ -133,7 +133,7 @@
         <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/LICENSE">Terms of Service</a>
-            <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/README.md">Developer</a>
+            <a href="https://github.com/Saviru">Developer</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
     </footer>
