Upadated readme and footer

--- a/index.html
+++ b/index.html
@@ -130,12 +130,15 @@
     </main>
     
     <footer>
+        <p>GitBanner v0.25.9.1 (Beta)</p>
         <p>Copyright &copy; 2025 Saviru Kashmira Atapattu</p>
         <div class="footer-links">
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator/blob/main/LICENSE">Terms of Service</a>
             <a href="https://github.com/Saviru">Developer</a>
             <a href="https://github.com/Saviru/Animated-Profile-Banner-Generator">Source Code</a>
         </div>
+        <br>
+        <p style="font-size: small;">Made with ❤️ for the GitHub community</p>
     </footer>
 
     <!-- Hidden SVG for generating the profile -->
